SERVER-18679 Wrong key count for reverse indexes in WT